# rust-analyzer

./: Cargo.toml
crates/limit/src/: lib.rs
crates/sourcegen/src/: lib.rs
crates/stdx/src/: non_empty_vec.rs
crates/stdx/src/thread/: pool.rs
crates/syntax/src/: tests.rs
crates/syntax/src/ast/: make.rs
crates/test-utils/src/: lib.rs
xtask/src/release/: changelog.rs
